--- a/public/chat.html
+++ b/public/chat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,9 +23,15 @@
           <h3><i class="fas fa-comments"></i> Room Name:</h3>
           <h2 id="room-name"></h2>
           <h3><i class="fas fa-users"></i> Users</h3>
-          <ul id="users"></ul>
+          <ul id="users">
+          </ul>
         </div>
-        <div class="chat-messages"></div>
+        <div class="chat-messages">
+          <div class="chat-messages">
+            <div class="message">
+            </div>
+          </div>
+        </div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
