this one works!

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="/api/submit-form" method="POST">
+				<form action="/submit-form" method="POST">
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
