--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="/submit-form" method="POST">
+				<form action="/chat" method="POST">
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
@@ -50,7 +50,7 @@
 					</div>
                     <div class="field">
                         <label>Password</label>
-                        <input type="text" placeholder="Enter a new password"
+                        <input type="password" placeholder="Enter a new password"
                         required />
                     </div>
                     <div class="field">
