--- a/public/chat.html
+++ b/public/chat.html
@@ -21,9 +21,12 @@
       <main class="chat-main">
         <div class="chat-sidebar">
           <h3><i class="fas fa-comments"></i> Room Name:</h3>
-          <h2 id="room-name"></h2>
+          <h2 id="room-name"> Shadowlands</h2>
           <h3><i class="fas fa-users"></i> Users</h3>
           <ul id="users">
+            <li>Sylvanas</li>
+            <li>Thrall</li>
+            <li>Jana</li>
           </ul>
         </div>
         <div class="chat-messages">
