--- a/public/waitroom.html
+++ b/public/waitroom.html
@@ -11,32 +11,16 @@
       <!-- navigation -->
       <div class="topnav">
   <a class="active" href="#home">CHATly</a>
-  <a href="./waitroom.html">Login</a>
+  <a href="#login">Login</a>
   <a href="#logout">Logout</a>
   <a href="\dashboard">About</a>
 </div>
-   <div class="join-container">
+    <div class="join-container">
 			<header class="join-header">
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="chat.html" method="get">
-                    <div class="nameInput">
-                        <div class="field">
-                            <label>First Name</label>
-                            <input type="text" placeholder="First Name" name="firstname"
-                            required />
-                        </div>
-                        <div class="field">
-                            <label>Last Name</label>
-                            <input type="text" placeholder="Last Name"
-                            required />
-                        </div>
-					<div class="field">
-                        <label>Email Address</label>
-                        <input type="text" placeholder="Enter your email address"
-                        required />
-                    </div>
+				<form action="/chat" method="POST"></form>
                     <div class="form-control">
 						<label for="username">Username</label>
 						<input
@@ -49,10 +33,10 @@
 					</div>
                     <div class="field">
                         <label>Password</label>
-                        <input type="password" placeholder="Enter a new password"
+                        <input type="text" placeholder="Enter your password"
                         required />
                     </div>
-                    <div class="form-control">
+                    <div class="field">
 						<label for="room">Choose a Room</label>
 						<select name="room" id="room">
 							<option value="Azeroth">Azeroth</option>
