--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 
     </head>
 <body>
-    <!-- navigation -->
       <!-- navigation -->
       <div class="topnav">
   <a class="active" href="#home">CHATly</a>
@@ -21,7 +20,18 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="/chat" method="POST">
+				<form action="chat.html">
+                    <div class="form-control">
+						<label for="username">Username</label>
+						<input
+							type="text"
+							name="username"
+							id="username"
+							placeholder="Enter username..."
+							required
+						/>
+					</div>
+
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
@@ -38,16 +48,6 @@
                         <input type="text" placeholder="Enter your email address"
                         required />
                     </div>
-                    <div class="form-control">
-						<label for="username">Username</label>
-						<input
-							type="text"
-							name="username"
-							id="username"
-							placeholder="Enter username..."
-							required
-						/>
-					</div>
                     <div class="field">
                         <label>Password</label>
                         <input type="password" placeholder="Enter a new password"
