--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,13 @@
 <body>
       <!-- navigation -->
       <div class="topnav">
-  <a class="active" href="#home">CHATly</a>
-  <a href="#login">Login</a>
-  <a href="#logout">Logout</a>
-  <a href="\dashboard">About</a>
+  <a class="active" href="./index.html">CHATly</a>
+  <!-- <a href="login.html">Login</a> -->
+  <a href="/signup">Create Account</a>
+  <a href="/login">Login</a>
+
+  <!-- <a href="#logout">Logout</a>
+  <a href="\dashboard">About</a> -->
 </div>
     <div class="join-container">
 			<header class="join-header">
@@ -32,7 +35,7 @@
 						/>
 					</div>
 
-                    <div class="nameInput">
+                    <!-- <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
                             <input type="text" placeholder="First Name" name="firstname"
@@ -52,7 +55,7 @@
                         <label>Password</label>
                         <input type="password" placeholder="Enter a new password"
                         required />
-                    </div>
+                    </div> -->
                     <div class="field">
 						<label for="room">Choose a Room</label>
 						<select name="room" id="room">
