--- a/public/chat.html
+++ b/public/chat.html
@@ -49,6 +49,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/main.js"></script>
+    <script src="javascript/main.js"></script>
   </body>
 </html>
