login maybe works

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>CHATly</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="stylesheets/style.css">
 
     </head>
 <body>
@@ -14,6 +14,7 @@
   <!-- <a href="login.html">Login</a> -->
   <a href="/signup">Create Account</a>
   <a href="/login">Login</a>
+  <a href="/logout">Logout</a>
 
   <!-- <a href="#logout">Logout</a>
   <a href="\dashboard">About</a> -->
@@ -45,17 +46,17 @@
                             <label>Last Name</label>
                             <input type="text" placeholder="Last Name"
                             required />
-                        </div>
+                        </div>-->
 					<div class="field">
                         <label>Email Address</label>
                         <input type="text" placeholder="Enter your email address"
                         required />
-                    </div>
+                    </div> 
                     <div class="field">
                         <label>Password</label>
                         <input type="password" placeholder="Enter a new password"
                         required />
-                    </div> -->
+                    </div>
                     <div class="field">
 						<label for="room">Choose a Room</label>
 						<select name="room" id="room">
