--- a/public/chat.html
+++ b/public/chat.html
@@ -1,4 +1,4 @@
-                                            <!-- chat.html -->
+                                       
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
     <title>CHATly</title>
   </head>
   <body>
