--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <!-- <a href="login.html">Login</a> -->
   <a href="/signup">Create Account</a>
   <a href="/login">Login</a>
-  <a href="/logout">Logout</a>
+  <!-- <a href="/logout">Logout</a> -->
 
   <!-- <a href="#logout">Logout</a>
   <a href="\dashboard">About</a> -->
@@ -48,13 +48,13 @@
                             required />
                         </div>-->
 					<div class="field">
-                        <label>Email Address</label>
-                        <input type="text" placeholder="Enter your email address"
+                        <label for="email-login">Email Address</label>
+                        <input type="text" id="email-login" placeholder="Enter your email address"
                         required />
                     </div> 
                     <div class="field">
-                        <label>Password</label>
-                        <input type="password" placeholder="Enter a new password"
+                        <label for="password-login">Password:</label>
+                        <input type="password" id="password-login" placeholder="Enter a new password"
                         required />
                     </div>
                     <div class="field">
